# spin-static-site

./: .gitignore  Cargo.toml  README.md  spin.toml
src/: lib.rs
www/: index.html
www/css/: styles.css
